tests/invalid_loop/test_uv_signal.php
<?php
$class = 'UVSignal';
require __DIR__ . '/../../test-tools.php';
require __DIR__ . '/error_handler.php';
$signal = new UVSignal(new stdClass());
